data/derived/fa15/progs/unify/prog1677.ml.out
Characters 136-145:
  |Cosine s-> "cos(pi*"+exprToString s+")"
              ^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
